Fix an issue were checkbox in lists were no correctly aligned

--- a/src/Assets/Stylus/Components/Lists.styl
+++ b/src/Assets/Stylus/Components/Lists.styl
@@ -16,3 +16,8 @@ theme(v-list, "v-list")
 .v-list__tile--avatar
     height: $toolbar-height
 
+.v-list__tile__action
+  .v-input--selection-controls
+    .v-input__slot
+      margin-bottom 0
+
